<resources>
    <string name="app_name">TrashForm</string>
    <string name="my_image_description" />
    <string name="Welcome_to_trashform">Welcome to TrashForm</string>
    <string name="trashform">TrashForm</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="google">Google</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google_logo">Google Logo</string>
    <string name="send_data">Send Data</string>
    <string name="email">Email</string>
    <string name="create_your_account">Create your account</string>
    <string name="location">Location</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_login_page">Sign up</string>
    <string name="sign_in_register_page">Sign in</string>
</resources>