<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:padding="50dp"
    tools:context=".RegisterActivity">

    <!--Header-->
    <ImageView
        android:id="@+id/logoVer2"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:contentDescription="@string/my_image_description"
        android:src="@drawable/logo_ver2"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="33dp" />

    <!--Create your account-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:id="@+id/CreateAccountText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/dark_green"/>

    <!--Name Input Area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:inputType="text"
            android:textStyle="normal"
            android:hint="@string/name"
            android:autofillHints="name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Email Input Area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginTop="5dp"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_edittext"
            android:inputType="textEmailAddress"
            android:textStyle="normal"
            android:hint="@string/email"
            android:autofillHints="emailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Location Input Area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:layout_marginTop="5dp"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:inputType="text"
            android:textStyle="normal"
            android:hint="@string/location"
            android:autofillHints="location"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password Input Area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_edittext"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Confirm Password Input Area-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true"
        style="@style/CustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_edittext"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:autofillHints="password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Sign Up Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:id="@+id/sign_up"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        app:cornerRadius = "10dp"/>

    <!--Or sign in with-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_with"
            android:textColor="@color/dark_green"
            android:paddingHorizontal="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/black"/>
    </LinearLayout>

    <!--Register with Google Button-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="90dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/google_logo"/>

        <Button
            android:id="@+id/Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/white"
            android:paddingStart="75dp"
            android:paddingEnd="45dp"
            android:text="@string/google"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </RelativeLayout>

    <!--To move in Log in Page-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:color="@color/green"
            android:gravity="center"
            android:text="@string/sign_in_register_page"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>