<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_to_trashform"
        android:onClick="sendData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trashform"
        android:id="@+id/AppNameText"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/dark_green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:id="@+id/LoginText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/username"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:padding="20dp"
            android:hint="@string/username"
            android:autofillHints="username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:padding="20dp"
            android:hint="@string/password"
            android:autofillHints="password"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in"
            android:id="@+id/SignInText"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/green"
            app:cornerRadius = "10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_sign_in_with"
                    android:textColor="@android:color/black"
                    android:paddingHorizontal="10dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"/>
            </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/google"
            android:id="@+id/Google"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/button_border"
            android:textColor="@color/dark_green"
            app:cornerRadius = "10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_sign_up"/>

    </LinearLayout>

</LinearLayout>